# modkit

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .tagitrc  Makefile  README.md  README.rst  modkit.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/workflows/: build.yml
test_import_everything/: everything_test.py  module_everything.py
tests/: _testAlias.py  _testBan.py  _testModuleAll.py  _testMultiple.py  _testWildExports.py  bare_wrapped_module.py  module.py  moduleAlias.py  moduleAll.py  moduleBan.py  moduleCall.py  moduleExports.py  moduleWildExports.py  module_alias.py  module_empty.py  module_postinit.py  module_shallow_copy.py  submodule.py  test.py  testAllDelegate.py  testBan.py  testCall.py  testExports.py  test_modkit.py  wrapped_module.py
tests/with_submodules/: __init__.py
