[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "modkit"
version = "0.0.8"
description = "A package to manage your python modules."
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/modkit"
repository = "https://github.com/pwwang/modkit"
[[tool.poetry.packages]]
include = "modkit.py"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
cmdy = "*"
