[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "modkit"
version = "0.3.0"
description = "Tweak your modules the way you want"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/modkit"
repository = "https://github.com/pwwang/modkit"

[tool.poetry.dependencies]
python = "^3.6"
varname = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
